--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             text-align: center;
         }
         .container {
-            width: 95%;
-            max-width: 320px;
+            width: 100%;
+            max-width: 100%;
             background: white;
             padding: 5px;
-            margin: 5px auto;
-            border-radius: 8px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            margin: 0;
+            border-radius: 0;
+            box-shadow: none;
         }
         h1 {
             background: #a83232;
